--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link active" aria-current="page" href="#sobre_mi">Sobre mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Progreso Laboral</a>
+              <a class="nav-link" href="#laboral">Progreso Laboral</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Mi historia</a>
@@ -64,6 +64,8 @@
 
     <!-- FIN DE LA BARRA -->
 
+    <!-- inicio de descripcion sobre -->
+
     <section class="inicio w-100" >
         <h2 class="welcome">Bienvenido</h2>
         <h5 class="fade-in">Conoceme un poco mas! <br><p>Tienes que aprender a aprovechar la tecnología para poder usarla para cosas <br> sin estar desconectado de la naturaleza. -Talib Kweli.</p></h5>
@@ -77,6 +79,72 @@
       </div>
     </section>
         
+    <!-- fin de descripcion sobre mi -->
+
+    <!-- inicio experiencia laboral -->
+
+  <section class="titulo_experiencia">
+
+    <h1 id="laboral">Experiencia Laboral</h1>
+    <img src="img/image (7).png" alt="breyner_corazon">
+    <p>Estoy profundamente agradecido con cada una de las empresas en las que he tenido la oportunidad de trabajar.<br>Lo que aprendí en cada una de ellas me formó de muchas maneras, permitiéndome mostrar de lo que soy capaz.<br> Gracias a estas experiencias, he crecido profesional y personalmente. Si no hubiera estado allí, no sabría qué sería de mi vida hoy en día.<br> ¡Gracias por darme la oportunidad de descubrir y desarrollar mi potencial!</p>
+
+  </section>
+
+    <div class="card-group tarjeta_experience">
+      <div class="card">
+        <img src="/img/Grupo_Éxito_2021.webp" class="card-img-top grupo_exito" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">
+            Auxiliar Operativo en Puestos de Pago - Grupo Éxito</h5>
+          <p class="card-text">Responsable de:</p>
+          <ul>
+            <li><b>Registro de productos: </b>Escanear y registrar productos de los clientes.</li>
+            <li><b>Atención al cliente: </b>Proveer un excelente servicio al cliente.</li>
+            <li><b>Manejo de caja: </b>Verificar y manejar dinero en efectivo y otros métodos de pago.</li>
+            <li><b>Organización y limpieza: </b>Mantener el área de trabajo limpia y organizada.</li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Grupo Exito</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/img/price_travel.png" class="card-img-top price_travel" alt="Logo Compañia Price Travel">
+        <div class="card-body">
+          <h5 class="card-title">Aprendiz en Etapa Productiva - Price Travel, Colombia</h5>
+          <p class="card-text">Responsabilidades:</p>
+          <ul>
+            <li><b>Mantenimiento de equipos: </b>Realización de mantenimiento preventivo y correctivo.</li>
+            <li><b>Cableado: </b>Ponchado de cables y armado de pequeños cableados de UTP.</li>
+            <li><b>Instalación de cámaras: </b>Instalación y configuración de cámaras de seguridad.</li>
+            <li><b>Mesa de ayuda: </b>Asistencia a diferentes puestos de trabajo para solucionar problemas técnicos menores.</li>
+            <li><b>Inventario: </b>Gestión y control de inventarios de equipos y materiales.</li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Price Res S.A.S</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="/img/Logo-ATM.webp" class="card-img-top automundial_logo" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Asistente de Soporte en Automundial</h5>
+          <p class="card-text"><ul>
+            <li><b>Atención al cliente: </b>Responder a consultas y proporcionar asistencia a los clientes a través de diferentes canales como teléfono, correo electrónico y chat en vivo.</li>
+            <li><b>Solución de problemas: </b>Diagnosticar y resolver problemas técnicos relacionados con sistemas, aplicaciones y equipos.</li>
+            <li><b>Mantenimiento de equipos: </b>Realizar tareas de mantenimiento preventivo y correctivo en hardware y software.</li>
+            <li><b>Gestión de tickets: </b>Crear y gestionar tickets de soporte para llevar un registro de las incidencias y su resolución.</li>
+            <li><b>Documentación: </b>Mantener registros precisos de las interacciones con los clientes y las soluciones proporcionadas.</li>
+            <li><b>Colaboración: </b>Trabajar en estrecha colaboración con otros departamentos para escalar problemas complejos y mejorar los productos y servicios1.</li>
+          </ul></p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary">Automundial S.A</small>
+        </div>
+      </div>
+    </div>
+
     
 </body>
 </html>
